--- a/Resume.html
+++ b/Resume.html
@@ -135,43 +135,18 @@
                 <li>
                     <a href="Travel.html">旅遊</a>
                 </li>
-                <li>
-                    <a href="ContactMe.html">與我聯絡</a>
-                </li>
             </ul>
         </div>
     </nav>
     <!-- 介紹 -->
     <main>
-        <section class="AboutMe">
-            <h1>關於我</h1>
-            <p>
-                你好，我是Kenzo，一位充滿熱情的軟體工程師和影像處理專家。我的工作主要聚焦於開發高效且創新的影像處理演算法，同時我對軟體工程的多元領域有著廣泛的興趣。除了技術之外，我熱愛旅遊。探索不同的文化、美麗的風景和新奇的地方是我放鬆和啟發靈感的途徑。在旅途中，我喜歡挑戰自己，嘗試新的體驗，並將這些豐富的經歷融入我的生活和工作。
-            </p>
-        </section>
-        <section class="AboutWebSite">
-            <h1>關於網站</h1>
-            <p>
-                這個網站的存在源於對生命的熱愛與探索的渴望。開始經營的初衷，是為了紀錄個人的成長歷程以及豐富的旅遊體驗。透過這個平台，我能夠分享生活中的點滴，記錄自己的成長歷程，並留下每次旅行的珍貴回憶。
-            </p>
-        </section>
-        <section class="Articales">
-            <article>
-                <h2>首頁</h2>
-                <p>這裡是網站的首頁，是我與您分享最新動態、想法和專案的地方。歡迎您探索我的世界！</p>
-            </article>
-            <article>
-                <h2>履歷</h2>
-                <p>在這裡，您可以查看我的履歷，瞭解我的學經歷、專業技能和職業發展。讓我們一同回顧過去，了解我在軟體工程和影像處理領域的成就。</p>
-            </article>
-            <article>
-                <h2>作品</h2>
-                <p>這裡展示了我參與的一些專案和作品。從影像處理演算法到軟體開發，您可以深入了解我的技術實力和創作風格。</p>
-            </article>
-            <article>
-                <h2>旅遊</h2>
-                <p>追求知識不僅在技術領域，還在於探索世界。在這個板塊，我分享了我的旅遊經歷和所見所聞。一同感受文化的多樣性，品味旅行帶來的豐富體驗。</p>
-            </article>
+        <section class="MyInfo">
+            <h1>基本資歷</h1>
+            <p> 姓名:Kenzo Chang </p>
+            <p> 生日:3月9日 </p>
+            <p> 戶籍:Taiwan </p>
+            <p> 學歷:高雄應用科技大學 電子工程學習 碩士 </p>
+            <p> 專業能力: 影像處理, C#, HTML, JavaScript, CSS</p>
         </section>
     </main>
 
