Add more contents

--- a/Resume.html
+++ b/Resume.html
@@ -141,12 +141,36 @@
     <!-- 介紹 -->
     <main>
         <section class="MyInfo">
-            <h1>基本資歷</h1>
+            <h1>基本資料</h1>
             <p> 姓名:Kenzo Chang </p>
             <p> 生日:3月9日 </p>
             <p> 戶籍:Taiwan </p>
             <p> 學歷:高雄應用科技大學 電子工程學習 碩士 </p>
             <p> 專業能力: 影像處理, C#, HTML, JavaScript, CSS</p>
+        </section>
+        <section class="Career">
+            <h1>工作經驗</h1>
+            <article>
+                <p>年資: 2018/09~</p>
+                <p>公司名稱: 純軟體公司</p>
+                <p>職務: 軟體工程師</p>
+                <p>工作內容: Custometic detect machine </p>
+            </article>
+            <article>
+                <p>年資: 2017/09~2018/06</p>
+                <p>公司名稱: 半導體公司</p>
+                <p>職務: 影像處理工程師</p>
+                <p>工作內容: 晶圓級檢測算法與系統</p>
+            </article>
+            <article>
+                <p>年資: 2015/09~2017/09</p>
+                <p>公司名稱: 自動化公司</p>
+                <p>職務: AOI軟體工程師</p>
+                <p>工作內容: SMT/PCB 光學檢查機機台 </p>
+            </article>
+        </section>
+        <section class="Education">
+            
         </section>
     </main>
 
