Fixed 404 for home page

--- a/Resume.html
+++ b/Resume.html
@@ -124,7 +124,7 @@
         <div class="navbar">
             <ul>
                 <li>
-                    <a href="Index.html">首頁</a>
+                    <a href="index.html">首頁</a>
                 </li>
                 <li>
                     <a href="Resume.html">履歷</a>
@@ -170,7 +170,21 @@
             </article>
         </section>
         <section class="Education">
-            
+            <article>
+                <p>國立高雄應用科技大學</p>
+                <p>碩士班</p>
+                <p>電子工程學系</p>
+            </article>
+            <article>
+                <p>國立高雄應用科技大學</p>
+                <p>學士班</p>
+                <p>電子工程學系</p>
+            </article>
+            <article>
+                <p>國立桃園農業工業職業學校</p>
+                <p>高職</p>
+                <p>電子系</p>
+            </article>
         </section>
     </main>
 
