--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="navbar">
             <ul>
                 <li>
-                    <a href="Index.html">首頁</a>
+                    <a href="index.html">首頁</a>
                 </li>
                 <li>
                     <a href="Resume.html">履歷</a>
