Add fontawesome icon

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="description"
         content="你好，我是Kenzo，一位充滿熱情的軟體工程師和影像處理專家。我的工作主要聚焦於開發高效且創新的影像處理演算法，同時我對軟體工程的多元領域有著廣泛的興趣。除了技術之外，我熱愛旅遊。探索不同的文化、美麗的風景和新奇的地方是我放鬆和啟發靈感的途徑。在旅途中，我喜歡挑戰自己，嘗試新的體驗，並將這些豐富的經歷融入我的生活和工作。" />
     <meta name="auther" content="Kenzo" />
+    <script src="https://kit.fontawesome.com/e4807cf622.js" crossorigin="anonymous"></script>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">   -->
     <style>
         * {
@@ -37,6 +38,8 @@
         }
 
         nav {
+            position:sticky;
+            top:0;
             background: #000;
             color: white;
             justify-content: space-around;
@@ -124,19 +127,16 @@
         <div class="navbar">
             <ul>
                 <li>
-                    <a href="index.html">首頁</a>
+                    <a href="index.html"><i class="fa-solid fa-house"></i>首頁</a>
                 </li>
                 <li>
-                    <a href="Resume.html">履歷</a>
+                    <a href="MyResume.html"><i class="fa-solid fa-user"></i>履歷</a>
                 </li>
                 <li>
-                    <a href="Article.html">作品</a>
+                    <a href="MyWorks.html"><i class="fa-solid fa-star"></i>作品</a>
                 </li>
                 <li>
-                    <a href="Travel.html">旅遊</a>
-                </li>
-                <li>
-                    <a href="ContactMe.html">與我聯絡</a>
+                    <a href="MyTravels.html"><i class="fa-solid fa-plane"></i>旅遊</a>
                 </li>
             </ul>
         </div>
