--- a/MyResume.html
+++ b/MyResume.html
@@ -170,7 +170,7 @@
         <div class="navbar">
             <ul>
                 <li>
-                    <a href="index.html"><i class="fa-solid fa-house"></i>首頁</a>
+                    <a href="MyHome.html"><i class="fa-solid fa-house"></i>首頁</a>
                 </li>
                 <li>
                     <a href="MyResume.html"><i class="fa-solid fa-user"></i>履歷</a>
