--- a/MyHome.html
+++ b/MyHome.html
@@ -127,13 +127,13 @@
                     <a href="MyHome.html">首頁</a>
                 </li>
                 <li>
-                    <a href="Resume.html">履歷</a>
+                    <a href="MyResume.html">履歷</a>
                 </li>
                 <li>
-                    <a href="Article.html">作品</a>
+                    <a href="MyArticle.html">作品</a>
                 </li>
                 <li>
-                    <a href="Travel.html">旅遊</a>
+                    <a href="MyTravel.html">旅遊</a>
                 </li>
             </ul>
         </div>
