--- a/CSSCoke/01Coke-banner.html
+++ b/CSSCoke/01Coke-banner.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>banner</title>
     <style>
         @import url("https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,700,900&display=swap");
         /* CSS Reset */
@@ -36,7 +36,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            /* Flex預設是會滿版,設定為felx-start會依據內容改變 */
+            /* flex預設是會滿版,設定為felx-start會依據內容改變 */
             align-items: flex-start;
         }
 
