--- a/CSSCoke/02Coke.html
+++ b/CSSCoke/02Coke.html
@@ -59,7 +59,7 @@
             color: #ff0;
             font-weight: 500;
         }
-        /* 用background去漲線段 */
+        /* 用background去長線段 */
         .item h2:after {
             content: '';
             display: block;
